test/errors/identifiers_error/zs/reserved_keywords/python_keyword_parameter_name_error.zs
package reserved_keywords.python_keyword_parameter_name_error;

struct Item(uint16 def) // reserved keyword in generated Python
{
    uint32  arr[def];
};
